# modding-notes

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  all.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/configs/: labeler.yml
.github/workflows/: deploy-preview.yml  deploy.yml  test.yml
content/: index.html
content/advanced/gradle/: index.html
content/advanced/mapping/: index.html
content/getting-started/dependency/: index.html
content/getting-started/git/: index.html
content/getting-started/mod/: index.html
content/getting-started/mod-files/: index.html
content/getting-started/setup/: index.html
content/mixin/: index.html
content/mixin/injections/: index.html
content/mixin/mixin-extras/: index.html
content/mixin/tricks/: index.html
content/registries/basic/: index.html
content/registries/item/: index.html
content/rendering/api/: index.html
content/rendering/basic/: index.html
content/rendering/render-options/: index.html
docs/: all.txt  index.md
docs/content/: index.md
docs/content/advanced/: gradle.md
docs/content/component/: mod.md  registries.md  registry.md
docs/for-beginners/: env-building.md
docs/java/: dependency.md  gradle.md
docs/starter/: env-building.md
docs/system/: mapping.md  mixin.md
for-beginners/env-building/: index.html
hooks/: check.py  gather.py
java/dependency/: index.html
java/gradle/: index.html
search/: search_index.json
starter/env-building/: index.html
system/mapping/: index.html
system/mixin/: index.html
(+22 files in other folders)
