[project]
name = "modding-notes"
version = "0.1.0"
description = "Minecraft Modding Explained"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.3",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-simple-hooks>=0.1.5",
    "pymdown-extensions>=10.21",
]
